SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Credited_BDR_lookup__c.field-meta.xml
<CustomField>
    <fullName>Credited_BDR_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credited BDR</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.ProfileId</field>
            <operation>equals</operation>
            <value>00e1K0000026rbE,00e1K000001yZBy</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>