SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Credited_SDR__c.field-meta.xml
<CustomField>
    <fullName>Credited_SDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credited SDR</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.User_Role__c</field>
            <operation>contains</operation>
            <value>SDR</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>