SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/CS_Manager__c.field-meta.xml
<CustomField>
    <fullName>CS_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer Success Manager who assisted with this Opportunity</description>
    <inlineHelpText>Customer Success Manager who assisted with this Opportunity</inlineHelpText>
    <label>Customer Success Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.ProfileId</field>
            <operation>equals</operation>
            <value>00e41000001uJYBAA2</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>