SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/CSE_Created__c.field-meta.xml
<CustomField>
    <fullName>CSE_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSE Created</label>
    <type>Checkbox</type>
</CustomField>