SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/CSE_Handoff_Account_Risks__c.field-meta.xml
<CustomField>
    <fullName>CSE_Handoff_Account_Risks__c</fullName>
    <description>Concerns, risks, expected difficulties?</description>
    <inlineHelpText>Concerns, risks, expected difficulties?</inlineHelpText>
    <label>Account Risks</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>