SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/CSE_Handoff_Blockers__c.field-meta.xml
<CustomField>
    <fullName>CSE_Handoff_Blockers__c</fullName>
    <description>Person or circumstance preventing account from further expansion</description>
    <inlineHelpText>Person or circumstance preventing account from further expansion</inlineHelpText>
    <label>Account Blockers</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>