SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/CSE_Handoff_Champion__c.field-meta.xml
<CustomField>
    <fullName>CSE_Handoff_Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who was our champion and helped drive the sale?</description>
    <inlineHelpText>Who was our champion and helped drive the sale?</inlineHelpText>
    <label>Technical Champion</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Champion)</relationshipLabel>
    <relationshipName>OpportunitiesXFoO</relationshipName>
    <type>Lookup</type>
</CustomField>