SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/CSE_Handoff_Initiatives__c.field-meta.xml
<CustomField>
    <fullName>CSE_Handoff_Initiatives__c</fullName>
    <description>Paragraph on goals and initiatives of the team in using LaunchDarkly</description>
    <inlineHelpText>Paragraph on goals and initiatives of the team in using LaunchDarkly</inlineHelpText>
    <label>Initiatives</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>