SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/CSE_Handoff_Link_to_BVA_Documents__c.field-meta.xml
<CustomField>
    <fullName>CSE_Handoff_Link_to_BVA_Documents__c</fullName>
    <description>Link to BVA Documents copied from BVA_url in Business Evaluation Section</description>
    <formula>BVA_url__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto generated from BVA_url from Business Evaluation Section</inlineHelpText>
    <label>Link to BVA Documents</label>
    <type>Text</type>
</CustomField>