SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/CSE_Handoff_Needs__c.field-meta.xml
<CustomField>
    <fullName>CSE_Handoff_Needs__c</fullName>
    <description>What should the C/SE need to be aware of for onboarding?</description>
    <inlineHelpText>What should the C/SE need to be aware of for onboarding?</inlineHelpText>
    <label>Needs</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>