SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/CSE_Handoff_Successes__c.field-meta.xml
<CustomField>
    <fullName>CSE_Handoff_Successes__c</fullName>
    <description>Where have we succeeded, what has gone well?</description>
    <inlineHelpText>Where have we succeeded, what has gone well?</inlineHelpText>
    <label>Successes</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>