SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/CSE_Handoff_Team__c.field-meta.xml
<CustomField>
    <fullName>CSE_Handoff_Team__c</fullName>
    <description>Distributed or single location? Org details here</description>
    <inlineHelpText>Distributed or single location? Org details here</inlineHelpText>
    <label>Team Info</label>
    <type>TextArea</type>
</CustomField>