SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/CSE_Handoff_Tech_Stack__c.field-meta.xml
<CustomField>
    <fullName>CSE_Handoff_Tech_Stack__c</fullName>
    <description>CI/CD tools? SDKs Communication SW (Slack, MS Teams, etc.) Other tools?</description>
    <inlineHelpText>CI/CD tools? SDKs Communication SW (Slack, MS Teams, etc.) Other tools?</inlineHelpText>
    <label>Tech Stack</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>