SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/CSE_Handoff_Use_Cases__c.field-meta.xml
<CustomField>
    <fullName>CSE_Handoff_Use_Cases__c</fullName>
    <description>List of use cases by team</description>
    <inlineHelpText>List of use cases by team</inlineHelpText>
    <label>Use Cases</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>