SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/CSE_Handoff_VIPs__c.field-meta.xml
<CustomField>
    <fullName>CSE_Handoff_VIPs__c</fullName>
    <description>Paragraph or list of names of some of the key players on team</description>
    <inlineHelpText>Paragraph or list of names of some of the key players on team</inlineHelpText>
    <label>Team VIPs</label>
    <type>TextArea</type>
</CustomField>