SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Custom_terms__c.field-meta.xml
<CustomField>
    <fullName>Custom_terms__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if there are non-standard Terms and Conditions attached to this deal.</description>
    <inlineHelpText>Check this box if there are non-standard Terms and Conditions attached to this deal.</inlineHelpText>
    <label>Custom Terms?</label>
    <type>Checkbox</type>
</CustomField>