SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Custom_terms_description__c.field-meta.xml
<CustomField>
    <fullName>Custom_terms_description__c</fullName>
    <description>Summarize the custom terms we have in place.</description>
    <inlineHelpText>Please summarize the custom terms we have in place.</inlineHelpText>
    <label>Custom Terms Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>