SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Customer_Success_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Solutions Architect (formerly CSE) who assisted with the Opportunity</inlineHelpText>
    <label>Solutions Architect</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Manager.UserRoleId</field>
            <operation>equals</operation>
            <value>00E1K000001VLAA</value>
        </filterItems>
        <filterItems>
            <field>User.UserRoleId</field>
            <operation>equals</operation>
            <value>00E1K000001VLAA</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>