SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Data_Export__c.field-meta.xml
<CustomField>
    <fullName>Data_Export__c</fullName>
    <description>Data Export?</description>
    <inlineHelpText>Data Export?</inlineHelpText>
    <label>Data Export</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>