SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Data_Export_Is_Free__c.field-meta.xml
<CustomField>
    <fullName>Data_Export_Is_Free__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did the customer pay for data exports or get it for free?</description>
    <inlineHelpText>Did the customer pay for data exports or get it for free?</inlineHelpText>
    <label>Data Export - Is Free</label>
    <type>Checkbox</type>
</CustomField>