SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Date_of_Quickstart__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Quickstart__c</fullName>
    <inlineHelpText>Please make sure to schedule a Quickstart date for all ENTERPRISE deals.</inlineHelpText>
    <label>Date of Quickstart</label>
    <type>Date</type>
</CustomField>