SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Days_After_1st_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Days_After_1st_Meeting__c</fullName>
    <formula>TODAY() -  Meeting_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days After 1st Meeting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>