SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Days_after_meeting__c.field-meta.xml
<CustomField>
    <fullName>Days_after_meeting__c</fullName>
    <description>how many days after your meeting (should not be more than 30!)</description>
    <formula>TODAY() -  X2nd_Meeting_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days After 2nd Meeting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>