SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Days_between_Closed_and_Product__c.field-meta.xml
<CustomField>
    <fullName>Days_between_Closed_and_Product__c</fullName>
    <formula>CloseDate -  Minimum_Start_Date_Product__c</formula>
    <label>Days between Closed and Product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>