SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Days_till_Close_date__c.field-meta.xml
<CustomField>
    <fullName>Days_till_Close_date__c</fullName>
    <description>Used for Leandata opp workflow to capture how many more days before the opp closes</description>
    <formula>CloseDate - today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days till Close date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>