SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Days_Until_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Meeting__c</fullName>
    <description>How many days you have until your meeting</description>
    <formula>Meeting_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Meeting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>