SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Deal_Desk_Link__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Link__c</fullName>
    <inlineHelpText>Insert Deal Desk link, if relevant. This would link to Confluence.</inlineHelpText>
    <label>Deal Desk Link</label>
    <type>Url</type>
</CustomField>