SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/DealHub_Create_Subscription__c.field-meta.xml
<CustomField>
    <fullName>DealHub_Create_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DealHub Create Subscription</label>
    <type>Checkbox</type>
</CustomField>