SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Decision_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Decision_Criteria__c</fullName>
    <inlineHelpText>What is the buyer looking for? Do we need to meet certain technical, budget, or ROI requirements?</inlineHelpText>
    <label>Decision Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>