SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Decision_Process__c.field-meta.xml
<CustomField>
    <fullName>Decision_Process__c</fullName>
    <inlineHelpText>How does our solution get validated and approved? Document stakeholders, influencers, and approvers.</inlineHelpText>
    <label>Decision Process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>