SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Demo_Contact_Sales_Request__c.field-meta.xml
<CustomField>
    <fullName>Demo_Contact_Sales_Request__c</fullName>
    <description>BIZ-272</description>
    <label>Demo/Contact Sales Request</label>
    <type>Date</type>
</CustomField>