SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Demo_Type__c.field-meta.xml
<CustomField>
    <fullName>Demo_Type__c</fullName>
    <description>What type of Demo?</description>
    <label>Demo Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Demo</fullName>
            </value>
            <value>
                <fullName>A/B Testing</fullName>
            </value>
            <value>
                <fullName>Architecture Demo</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>