SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Deployment_type__c.field-meta.xml
<CustomField>
    <fullName>Deployment_type__c</fullName>
    <label>Deployment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SaaS</fullName>
            </value>
            <value>
                <fullName>Private Amazon</fullName>
            </value>
            <value>
                <fullName>On Premise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>