SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Discovery_Date__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Date__c</fullName>
    <description>Date this opp changed to the Discovery stage</description>
    <label>Discovery Date</label>
    <type>Date</type>
</CustomField>