SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Disqualification_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_Reason__c</fullName>
    <label>Opp Disqualification Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetName>Disqualify_Reasons</valueSetName>
    </valueSet>
</CustomField>