SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Do_they_FF_today__c.field-meta.xml
<CustomField>
    <fullName>Do_they_FF_today__c</fullName>
    <description>Is the company/team using feature flags today?</description>
    <inlineHelpText>Is the company/team using feature flags today?</inlineHelpText>
    <label>Do they FF today?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>