SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Do_they_have_a_pain_we_can_solve__c.field-meta.xml
<CustomField>
    <fullName>Do_they_have_a_pain_we_can_solve__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do they have a pain we can solve?? (Yes / No)</description>
    <inlineHelpText>Do they have a pain we can solve?? (Yes / No)</inlineHelpText>
    <label>C. Customer confirmed pain (why change?)</label>
    <type>Checkbox</type>
</CustomField>