SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Do_we_have_executive_sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Do_we_have_executive_sponsorship__c</fullName>
    <label>Do we have executive sponsorship?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>