SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Does_a_PO_need_to_be_issued__c.field-meta.xml
<CustomField>
    <fullName>Does_a_PO_need_to_be_issued__c</fullName>
    <description>Does a PO need to be issued?</description>
    <inlineHelpText>Does a PO need to be issued?</inlineHelpText>
    <label>Does a PO need to be issued?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>