SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/DQ_Date__c.field-meta.xml
<CustomField>
    <fullName>DQ_Date__c</fullName>
    <label>DQ Date</label>
    <type>Date</type>
</CustomField>