SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/DQ_Description__c.field-meta.xml
<CustomField>
    <fullName>DQ_Description__c</fullName>
    <description>add more details as to why the meeting qualify</description>
    <label>DQ Description</label>
    <type>TextArea</type>
</CustomField>