SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Duplicate_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Duplicate Opportunity</description>
    <inlineHelpText>Please select the duplicate opportunity</inlineHelpText>
    <label>Duplicate Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>DupeOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>