SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/E_Customer_agreed_to_begin_tech_eval__c.field-meta.xml
<CustomField>
    <fullName>E_Customer_agreed_to_begin_tech_eval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Align with POV start date</description>
    <label>E. Customer agreed to begin tech. eval</label>
    <type>Checkbox</type>
</CustomField>