SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Effective_service_date__c.field-meta.xml
<CustomField>
    <fullName>Effective_service_date__c</fullName>
    <description>Automated through rollup helper</description>
    <inlineHelpText>Pulled from the min Start Date on Product table</inlineHelpText>
    <label>Effective service start date</label>
    <type>Date</type>
</CustomField>