SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Evaluation_checklist__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_checklist__c</fullName>
    <inlineHelpText>Has the Evaluation checklist been sent out?</inlineHelpText>
    <label>Evaluation checklist sent?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>