SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Evaluation_Demo__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evaluation Demo</label>
    <type>Checkbox</type>
</CustomField>