SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Evaluation_Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Demo_Date__c</fullName>
    <description>When did we give our evaluation demo?</description>
    <label>Evaluation Demo Date</label>
    <type>Date</type>
</CustomField>