SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Evaluation_timeline__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_timeline__c</fullName>
    <label>What is the evaluation timeline?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>