SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Executive_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Executive_Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is the Economic Buyer/Sponsor?</description>
    <inlineHelpText>Who has the budget and authority to make a purchase?</inlineHelpText>
    <label>Economic Buyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Who is the Executive Buyer?)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>