SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Executive_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Who is the Executive Sponsor?</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Who is the Executive Sponsor?)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>