SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Exit_Criterion__c.field-meta.xml
<CustomField>
    <fullName>Exit_Criterion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://launchdarkly.atlassian.net/wiki/spaces/Policy/pages/62554380/Compendium+of+Custom+Contracts</description>
    <inlineHelpText>https://launchdarkly.atlassian.net/wiki/spaces/Policy/pages/62554380/Compendium+of+Custom+Contracts</inlineHelpText>
    <label>Termination Language changes</label>
    <type>Checkbox</type>
</CustomField>