SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Expansion_Type__c.field-meta.xml
<CustomField>
    <fullName>Expansion_Type__c</fullName>
    <inlineHelpText>For Expansions that are either an Add-On, New Product, or New Team, the evaluation order should be 1) if the sale is to a new team, select New Team. 2) If not a new team, and the customer is adding a new product, select New Product. 3) If not a new team, nor a new product, and the customer is simply increasing quantities for products they currently use, select Add-on.</inlineHelpText>
    <label>Expansion Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New product</fullName>
            </value>
            <value>
                <fullName>Add-on</fullName>
            </value>
            <value>
                <fullName>New Team - Same Instance</fullName>
            </value>
            <value>
                <fullName>New Team - New Instance</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>