SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Experimentation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Experimentation_Amount__c</fullName>
    <inlineHelpText>Total Spent on Experimentation</inlineHelpText>
    <label>Experimentation Amount</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Name__c</field>
        <operation>startsWith</operation>
        <value>Experimentation</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>