SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Experimentation_included_in_contract__c.field-meta.xml
<CustomField>
    <fullName>Experimentation_included_in_contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>interested in experimentation but not ready to start</description>
    <inlineHelpText>interested in experimentation but not ready to start</inlineHelpText>
    <label>Interested in experimentation in future</label>
    <type>Checkbox</type>
</CustomField>