SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Experimentation_Is_Free__c.field-meta.xml
<CustomField>
    <fullName>Experimentation_Is_Free__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did the customer pay for experimentation or get it for free?</description>
    <inlineHelpText>Did the customer pay for experimentation or get it for free?</inlineHelpText>
    <label>Experimentation - Is Free</label>
    <type>Checkbox</type>
</CustomField>