SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/F_Customer_agreed_to_mutual_plan__c.field-meta.xml
<CustomField>
    <fullName>F_Customer_agreed_to_mutual_plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>F. Customer agreed to mutual plan</label>
    <type>Checkbox</type>
</CustomField>