SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Finance_Approval_Requested_deals_150__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Requested_deals_150__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check once you have sent the contract to finance. This is mandatory for all deals $150k+. If this is an expansion opp, it includes the additional current ARR plus the expansion opp amount.</inlineHelpText>
    <label>AE sent contract to Finance(deals&gt;=150k)</label>
    <type>Checkbox</type>
</CustomField>