SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Finance_Approved__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Finance will check this box once they approve of the contract. This is mandatory for all deals $150k+. If this is an expansion opp, it includes the additional current ARR plus the expansion opp amount.</inlineHelpText>
    <label>Finance Approved (deals &gt;=$150k)</label>
    <type>Checkbox</type>
</CustomField>