SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/First_Campaign__c.field-meta.xml
<CustomField>
    <fullName>First_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The First Campaign from which the original converted Lead for this Opportunity is attributed to.</inlineHelpText>
    <label>First Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Opportunities (First Campaign)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>