SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Fiscal_Period_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Period_Qualified__c</fullName>
    <formula>IF(
MONTH( Qualification_Date__c )&lt;2,
(TEXT(Year( Qualification_Date__c )-1) + &quot; - &quot; +
CASE(MONTH( Qualification_Date__c ),

1,&apos;Q4&apos;,
2,&apos;Q1&apos;,
3,&apos;Q1&apos;,
4,&apos;Q1&apos;,
5,&apos;Q2&apos;,
6,&apos;Q2&apos;,
7,&apos;Q2&apos;,
8,&apos;Q3&apos;,
9,&apos;Q3&apos;,
10,&apos;Q3&apos;,
11,&apos;Q4&apos;,
12,&apos;Q4&apos;,
NULL)),

(TEXT(Year( Qualification_Date__c )) + &quot; - &quot; +
CASE(MONTH( Qualification_Date__c ),

1,&apos;Q4&apos;,
2,&apos;Q1&apos;,
3,&apos;Q1&apos;,
4,&apos;Q1&apos;,
5,&apos;Q2&apos;,
6,&apos;Q2&apos;,
7,&apos;Q2&apos;,
8,&apos;Q3&apos;,
9,&apos;Q3&apos;,
10,&apos;Q3&apos;,
11,&apos;Q4&apos;,
12,&apos;Q4&apos;,
NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Period Qualified</label>
    <type>Text</type>
</CustomField>