SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Fiscal_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Quarter__c</fullName>
    <formula>CASE(MONTH(CloseDate), 
1, &quot;FYQ4&quot; , 
2, &quot;FYQ1&quot;, 
3, &quot;FYQ1&quot;, 
4, &quot;FYQ1&quot;, 
5, &quot;FYQ2&quot;, 
6, &quot;FYQ2&quot;, 
7, &quot;FYQ2&quot;, 
8, &quot;FYQ3&quot;, 
9, &quot;FYQ3&quot;, 
10, &quot;FYQ3&quot;, 
11, &quot;FYQ4&quot;, 
12, &quot;FYQ4&quot;, 
&quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>FQ based on Closed Date</inlineHelpText>
    <label>Fiscal Quarter</label>
    <type>Text</type>
</CustomField>