SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/G_Access_given_to_key_stakeholders__c.field-meta.xml
<CustomField>
    <fullName>G_Access_given_to_key_stakeholders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>G. Access given to key stakeholders</label>
    <type>Checkbox</type>
</CustomField>