SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/goals_driving_initiative__c.field-meta.xml
<CustomField>
    <fullName>goals_driving_initiative__c</fullName>
    <inlineHelpText>What company goals are driving this initiative</inlineHelpText>
    <label>What goals are driving this initiative</label>
    <type>TextArea</type>
</CustomField>